--- a/Eremenko_lesson_5.html
+++ b/Eremenko_lesson_5.html
@@ -54,7 +54,7 @@
           alert(err);
         });
     };
-    summArray('/array.json');
+    summArray('array.json');
 
     /*
       5. (*) Написать функцию, которая будет сохранять ввод пользователя в переменную и отправлять значение переменной на http://attacker.com
